--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ dependencies = []
 
 [project.optional-dependencies]
 cli = ["typer>=0.17.4", "rich>=13.0.0"]
+docs = [
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.0.0",
+    "mkdocstrings[python]>=0.24.0",
+]
 
 [project.scripts]
 mii-cli = "mii_cli:app"
