--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "mii"
+name = "mii-lib"
 version = "0.1.0"
 description = "Library and CLI tool for extracting and analyzing Mii files from Nintendo console database dumps"
 readme = "README.md"
